--- a/spotify_cleaned.ipynb
+++ b/spotify_cleaned.ipynb
@@ -1812,35 +1812,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "1341c848",
+   "execution_count": 74,
+   "id": "e7bb4465",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Revenue RF 학습 완료 | R² train=1.000, test=1.000\n"
+      "✅ LTV RF 학습 완료 | R² train=0.883, test=0.148\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "is_premium                                           0.5\n",
-       "subscription_plan_Premium                            0.5\n",
-       "premium_sub_willingness                              0.0\n",
-       "fav_pod_genre_Everything                             0.0\n",
-       "pod_lis_frequency_Rarely                             0.0\n",
-       "pod_lis_frequency_Several times a week               0.0\n",
-       "fav_pod_genre_Comedy                                 0.0\n",
-       "fav_pod_genre_Dance and Relevant cases               0.0\n",
-       "fav_pod_genre_Educational                            0.0\n",
-       "fav_pod_genre_Finance related and current affairs    0.0\n",
-       "pod_lis_frequency_Never                              0.0\n",
-       "fav_pod_genre_Food and cooking                       0.0\n",
-       "fav_pod_genre_General knowledge                      0.0\n",
-       "fav_pod_genre_Health and Fitness                     0.0\n",
-       "fav_pod_genre_Informative stuff                      0.0\n",
+       "subscription_plan_Premium                                                                      0.106264\n",
+       "is_premium                                                                                     0.104791\n",
+       "music_recc_rating                                                                              0.056417\n",
+       "music_Influencial_mood_Sadness or melancholy                                                   0.036556\n",
+       "preffered_pod_duration_Longer                                                                  0.026352\n",
+       "fav_pod_genre_Sports                                                                           0.025866\n",
+       "fav_music_genre_Rap                                                                            0.022427\n",
+       "spotify_listening_device_Smartphone, Computer or laptop, Smart speakers or voice assistants    0.020630\n",
+       "spotify_listening_device_Smartphone                                                            0.016923\n",
+       "pod_host_preference_Well known individuals                                                     0.016852\n",
+       "music_lis_frequency_While Traveling                                                            0.016176\n",
+       "fav_pod_genre_Lifestyle and Health                                                             0.015999\n",
+       "music_expl_method_Playlists                                                                    0.015141\n",
+       "pod_lis_frequency_Several times a week                                                         0.014624\n",
+       "music_lis_frequency_Workout session                                                            0.014573\n",
        "dtype: float64"
       ]
      },
@@ -1849,13 +1849,13 @@
     }
    ],
    "source": [
-    "# ===== STEP5-A. Revenue Feature Importance (안전 버전) =====\n",
+    "# ===== STEP5. LTV Feature Importance (유저 단위, 안정 버전) =====\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# 1) 후보 변수 설정 (있는 것만 자동 선택)\n",
+    "# (0) 후보 컬럼 정의 (이미 위에서 썼더라도 여기서 다시 명시)\n",
     "num_candidates = [\"premium_sub_willingness\", \"music_recc_rating\", \"is_premium\"]\n",
     "cat_candidates = [\n",
     "    \"preferred_listening_content\",\"fav_music_genre\",\"music_time_slot\",\n",
@@ -1865,133 +1865,61 @@
     "    \"gender\",\"subscription_plan\",\"spotify_listening_device\"\n",
     "]\n",
     "\n",
-    "num_features = [c for c in num_candidates if c in df.columns]\n",
-    "cat_features = [c for c in cat_candidates if c in df.columns]\n",
-    "\n",
-    "# feature가 하나도 없으면 종료\n",
-    "assert len(num_features + cat_features) > 0, \"Revenue 예측용 feature가 없습니다. 후보 변수 존재 여부를 확인하세요.\"\n",
-    "\n",
-    "# 2) X, y 구성\n",
-    "X = pd.DataFrame(index=df.index)\n",
-    "# 수치형: 강제로 numeric 변환\n",
-    "for c in num_features:\n",
-    "    X[c] = pd.to_numeric(df[c], errors=\"coerce\")\n",
-    "\n",
-    "# 범주형: 문자열 변환 → 결측 'NA' → 원핫\n",
-    "for c in cat_features:\n",
-    "    X[c] = df[c].astype(str).fillna(\"NA\")\n",
-    "X = pd.get_dummies(X, columns=cat_features, drop_first=True)\n",
-    "\n",
-    "# 결측 처리\n",
-    "X = X.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
-    "\n",
-    "y = pd.to_numeric(df[\"revenue\"], errors=\"coerce\").fillna(0)\n",
-    "\n",
-    "# 표본/특징 최소 검사\n",
-    "assert X.shape[0] >= 20 and X.shape[1] >= 1, f\"샘플/특징 부족: X={X.shape}, y={y.shape}\"\n",
-    "\n",
-    "# 3) 학습/검증\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=max(0.2, min(0.2, 0.2)), random_state=42)\n",
-    "rf_revenue = RandomForestRegressor(n_estimators=300, random_state=42)\n",
-    "rf_revenue.fit(X_train, y_train)\n",
-    "\n",
-    "# 4) 중요도/성능 출력\n",
-    "imp_revenue = pd.Series(rf_revenue.feature_importances_, index=X.columns).sort_values(ascending=False)\n",
-    "r2_train = rf_revenue.score(X_train, y_train)\n",
-    "r2_test  = rf_revenue.score(X_test,  y_test)\n",
-    "\n",
-    "print(f\"✅ Revenue RF 학습 완료 | R² train={r2_train:.3f}, test={r2_test:.3f}\")\n",
-    "display(imp_revenue.head(15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "3c68458c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ LTV RF 학습 완료 | R² train=0.883, test=0.155\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "is_premium                                                                                     0.110912\n",
-       "subscription_plan_Premium                                                                      0.100143\n",
-       "music_recc_rating                                                                              0.055372\n",
-       "music_Influencial_mood_Sadness or melancholy                                                   0.036534\n",
-       "fav_pod_genre_Sports                                                                           0.026846\n",
-       "preffered_pod_duration_Longer                                                                  0.026173\n",
-       "fav_music_genre_Rap                                                                            0.022057\n",
-       "spotify_listening_device_Smartphone, Computer or laptop, Smart speakers or voice assistants    0.020328\n",
-       "pod_host_preference_Well known individuals                                                     0.017183\n",
-       "spotify_listening_device_Smartphone                                                            0.015960\n",
-       "fav_pod_genre_Lifestyle and Health                                                             0.015829\n",
-       "music_lis_frequency_While Traveling                                                            0.015576\n",
-       "music_expl_method_Playlists                                                                    0.014937\n",
-       "music_lis_frequency_Workout session                                                            0.014924\n",
-       "pod_lis_frequency_Several times a week                                                         0.014915\n",
-       "dtype: float64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# ===== STEP5-B. LTV Feature Importance (유저 단위, 안전 버전) =====\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "# 1) 유저 대표 취향(최근 월) 묶기\n",
+    "# (1) 유저 대표 취향 — 모든 취향 컬럼이 NaN인 행은 제외하고, userid별 '가장 최근' 응답 사용\n",
     "rep_cols = list(set(num_candidates + cat_candidates))\n",
     "rep_cols = [c for c in rep_cols if c in df.columns]\n",
+    "\n",
     "rep_pref = (\n",
-    "    df.sort_values([\"userid\",\"month\"])\n",
+    "    df.dropna(subset=[c for c in cat_candidates if c in df.columns], how=\"all\")   # ← 포인트!\n",
+    "      .sort_values([\"userid\",\"month\"])\n",
     "      .groupby(\"userid\")\n",
     "      .tail(1)[[\"userid\"] + rep_cols]\n",
     ")\n",
     "\n",
-    "# 2) LTV 데이터(ltv_user)와 병합\n",
+    "# (2) LTV 데이터 병합\n",
     "ltv_data = ltv_user.merge(rep_pref, on=\"userid\", how=\"left\")\n",
     "\n",
-    "# 3) X2, y2 구성\n",
+    "# (3) X(설명변수), y(타깃=LTV) 구성\n",
     "X2 = pd.DataFrame(index=ltv_data.index)\n",
+    "\n",
+    "# 숫자형 후보 → 숫자로 강제 변환\n",
     "for c in [c for c in num_candidates if c in ltv_data.columns]:\n",
     "    X2[c] = pd.to_numeric(ltv_data[c], errors=\"coerce\")\n",
     "\n",
+    "# 범주형 후보 → 문자열로 통일 후 결측을 'None'으로 채움\n",
     "cats2 = [c for c in cat_candidates if c in ltv_data.columns]\n",
     "for c in cats2:\n",
-    "    X2[c] = ltv_data[c].astype(str).fillna(\"NA\")\n",
+    "    X2[c] = ltv_data[c].astype(str).fillna(\"None\")\n",
+    "\n",
+    "# 원-핫 인코딩\n",
     "X2 = pd.get_dummies(X2, columns=cats2, drop_first=True)\n",
+    "\n",
+    "# 결측률 80% 이상 컬럼 제거 + 남은 결측/무한대 처리\n",
+    "X2 = X2.dropna(axis=1, thresh=len(X2)*0.2)\n",
     "X2 = X2.replace([np.inf, -np.inf], np.nan).fillna(0)\n",
     "\n",
     "y2 = pd.to_numeric(ltv_data[\"ltv\"], errors=\"coerce\").fillna(0)\n",
     "\n",
-    "# 최소 표본 검사\n",
+    "# (4) 최소 표본 검사\n",
     "assert X2.shape[0] >= 20 and X2.shape[1] >= 1, f\"LTV 표본/특징 부족: X2={X2.shape}, y2={y2.shape}\"\n",
     "\n",
-    "# 4) 학습/검증\n",
+    "# (5) 학습 / 검증\n",
     "X2_train, X2_test, y2_train, y2_test = train_test_split(X2, y2, test_size=0.2, random_state=42)\n",
     "rf_ltv = RandomForestRegressor(n_estimators=300, random_state=42)\n",
     "rf_ltv.fit(X2_train, y2_train)\n",
     "\n",
-    "# 5) 중요도/성능\n",
+    "# (6) 중요도 계산\n",
     "imp_ltv = pd.Series(rf_ltv.feature_importances_, index=X2.columns).sort_values(ascending=False)\n",
     "r2_train2 = rf_ltv.score(X2_train, y2_train)\n",
     "r2_test2  = rf_ltv.score(X2_test,  y2_test)\n",
     "\n",
     "print(f\"✅ LTV RF 학습 완료 | R² train={r2_train2:.3f}, test={r2_test2:.3f}\")\n",
-    "display(imp_ltv.head(15))"
+    "display(imp_ltv.head(15))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "id": "302c84c4",
    "metadata": {},
    "outputs": [
@@ -2010,19 +1938,18 @@
     }
    ],
    "source": [
+    "# ===== STEP6. Export to /data (Streamlit에서 읽을 파일) =====\n",
     "import os\n",
     "out_dir = \"data\"   # 앱에서 찾는 폴더\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
-    "# 이미 계산된 변수들: kpi, ret_df, arpu_monthly, summary_pref, tests_df, imp_ltv\n",
+    "# 이미 계산된 객체들: kpi, ret_df, arpu_monthly, summary_pref, tests_df, imp_ltv\n",
     "kpi.to_csv(f\"{out_dir}/out_revenue_kpis.csv\", index=False)\n",
     "ret_df.to_csv(f\"{out_dir}/out_premium_retention_monthly.csv\", index=False)\n",
     "arpu_monthly.to_csv(f\"{out_dir}/out_arpu_monthly.csv\", index=False)\n",
-    "\n",
-    "# (이미 있는 것들도 같은 폴더로 저장해두면 깔끔)\n",
     "summary_pref.to_csv(f\"{out_dir}/out_pref_group_summary.csv\", index=False)\n",
     "tests_df.to_csv(f\"{out_dir}/out_pref_significance_tests.csv\", index=False)\n",
-    "imp_ltv.to_csv(f\"{out_dir}/out_feature_importance_ltv.csv\", index=False)\n",
+    "imp_ltv.to_frame(\"importance\").to_csv(f\"{out_dir}/out_feature_importance_ltv.csv\")  # 중요도 저장\n",
     "\n",
     "print(\"✅ Export 완료 → /data 폴더:\")\n",
     "print(\"- out_revenue_kpis.csv\")\n",
@@ -2030,7 +1957,7 @@
     "print(\"- out_arpu_monthly.csv\")\n",
     "print(\"- out_pref_group_summary.csv\")\n",
     "print(\"- out_pref_significance_tests.csv\")\n",
-    "print(\"- out_feature_importance_ltv.csv\")"
+    "print(\"- out_feature_importance_ltv.csv\")\n"
    ]
   },
   {
