--- a/spotify_cleaned.ipynb
+++ b/spotify_cleaned.ipynb
@@ -1812,7 +1812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "id": "e7bb4465",
    "metadata": {},
    "outputs": [
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "id": "302c84c4",
    "metadata": {},
    "outputs": [
@@ -1962,11 +1962,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "94194b97",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "files: ['.DS_Store', 'out_revenue_kpis.csv', 'out_pref_significance_tests.csv', 'out_premium_retention_monthly.csv', 'out_pref_group_summary.csv', 'out_arpu_monthly.csv', 'processed', 'raw', 'out_feature_importance_ltv.csv']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>subscription_plan_Premium</td>\n",
+       "      <td>0.106264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>is_premium</td>\n",
+       "      <td>0.104791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>music_recc_rating</td>\n",
+       "      <td>0.056417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>music_Influencial_mood_Sadness or melancholy</td>\n",
+       "      <td>0.036556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>preffered_pod_duration_Longer</td>\n",
+       "      <td>0.026352</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Unnamed: 0  importance\n",
+       "0                     subscription_plan_Premium    0.106264\n",
+       "1                                    is_premium    0.104791\n",
+       "2                             music_recc_rating    0.056417\n",
+       "3  music_Influencial_mood_Sadness or melancholy    0.036556\n",
+       "4                 preffered_pod_duration_Longer    0.026352"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os, pandas as pd\n",
+    "print(\"files:\", os.listdir(\"data\"))\n",
+    "pd.read_csv(\"data/out_feature_importance_ltv.csv\").head()"
+   ]
   }
  ],
  "metadata": {
